src/test/resources/public/input/typechecking/fail/unknown_type/fail01.jova
class Main {

  public int main() {
    int a;

    NotExistingClass a, b, c;

    return 0;
  }
}